testdata/baselines/reference/submodule/compiler/typecheckCommaExpression.errors.txt
typecheckCommaExpression.ts(1,2): error TS2304: Cannot find name 'a'.
typecheckCommaExpression.ts(1,5): error TS2304: Cannot find name 'b'.


==== typecheckCommaExpression.ts (2 errors) ====
    (a, b)
     ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.